# climweb

./: .dockerignore  .env.dev  .env.dev.sample  .env.sample  .gitattributes  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  HARASSMENT_POLICY.md  LEGAL.md  LICENSE  README.md  changed_files.txt  contributors.md  contributors_report.json  crowdin.yml  db.sqlite3  dev.sh  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.yml  dump.rdb  entrypoint.sh  files.json  forecasts_dump.json  manage.py  members.json  nmhs-ctl.py  re  requirements.txt  rtl-audit.md  satellite.cron  test.conf  translations.md  translator.py
climweb/: Dockerfile  MANIFEST.in  pyproject.toml  setup.py
climweb/docker/: backup.cron  city_forecast.cron  docker-entrypoint.sh  process_tasks.cron  wdqms.cron
climweb/requirements/: README.md  base.in  base.txt  dev.in  dev.txt
climweb/src/climweb/: ._media  __init__.py  clear_fuzzy.py  gunicorn.config.py  manage.py  version.py
climweb/src/climweb/base/: anti_spam.py  apps.py  blocks.py  cache.py  cap.py  cap_views.py  choosers.py  constants.py  context_processors.py  exceptions.py  forms.py  mail.py  mixins.py  registries.py  registry.py  seo_utils.py  tasks.py  test_utils.py  utils.py  views.py  wagtail_hooks.py  weasyprint_utils.py
climweb/src/climweb/base/ai/: agent_provider.py  backend.py
climweb/src/climweb/base/backups/: README.md  crypto.py  google_drive.py  notify.py  panels.py  sftp.py  (+1 more)
climweb/src/climweb/config/: asgi.py  celery_init.py  urls.py  wsgi.py
climweb/src/climweb/utils/: version.py
(+3447 files in other folders)
