[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "climweb"
authors = [
    { name = "Erick Otenyo", email = "otenyo.erick@gmail.com" },
    { name = "Grace Amondi", email = "miswa.grace@gmail.com" }
]
description = """"""

license = { file = "LICENSE" }
requires-python = ">=3.8"
dynamic = ["version", "dependencies"]
classifiers = []

[project.urls]
Homepage = "https://github.com/wmo-raf/nmhs-cms"
"Bug Tracker" = "https://github.com/wmo-raf/nmhs-cms/issues"
Documentation = "https://nmhs-cms.readthedocs.io/"

[tool.black]
exclude = """
/(
  | migrations
  | generated
)/
"""
# ensure consistent formatting for black
# see https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#required-version
# see https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#target-version
target-version = ["py311"]
required-version = "23"

[tool.setuptools]
include-package-data = true
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux"]

#[tool.setuptools.package-data]

[tool.setuptools.packages.find]
namespaces = true
where = ["src/"]
include = ["climweb", "climweb.*"]

[tool.setuptools.dynamic]
# version always from the code
version = { attr = "climweb.version.__version__" }
dependencies = { file = ["requirements/base.txt"] }